==> whitecatboard/Lua-RTOS-ESP32/sys/drivers/platform/esp32/uart.c <==
#include "whitecat.h"
#include <FreeRTOS.h>
#include <queue.h>
#include <stdio.h>
#include <string.h>
#include <stdarg.h>
#include <signal.h>
#include <pthread.h>
#include <sys/drivers/uart.h>
#include <sys/drivers/gpio.h>
#include <sys/drivers/console.h>
#include <sys/drivers/cpu.h>
#include <sys/syslog.h>
#include <sys/status.h>
#include <esp_types.h>
#include "esp_err.h"
#include "esp_intr.h"
#include "xtensa_api.h"
#include "soc/soc.h"
#define UART_FLAG_INIT		(1 << 1)
#define UART_FLAG_IRQ_INIT	(1 << 2)
#define ETS_UART_INUM  5
#define UART_INTR_SOURCE(u) ((u==0)?ETS_UART0_INTR_SOURCE:( (u==1)?ETS_UART1_INTR_SOURCE:((u==2)?ETS_UART2_INTR_SOURCE:0)))

void uart_pin_config(u8_t unit, u8_t *rx, u8_t *tx) {
	wait_tx_empty(0);
	wait_tx_empty(1);

	switch (unit) {
		case 0:
			// Enable UTX0
			PIN_PULLUP_DIS(PERIPHS_IO_MUX_U0TXD_U);
			PIN_FUNC_SELECT(PERIPHS_IO_MUX_U0TXD_U, FUNC_U0TXD_U0TXD);

			// Enable U0RX
	        PIN_PULLUP_EN(PERIPHS_IO_MUX_U0RXD_U);
	        PIN_FUNC_SELECT(PERIPHS_IO_MUX_U0RXD_U, FUNC_U0RXD_U0RXD);

			if (rx) *rx = PIN_GPIO3;
			if (tx) *tx = PIN_GPIO1;
			
			break;
						
		case 1:
			// Enable U1TX
			PIN_PULLUP_DIS(PERIPHS_IO_MUX_SD_DATA3_U);
			PIN_FUNC_SELECT(PERIPHS_IO_MUX_SD_DATA3_U, FUNC_SD_DATA3_U1TXD);

			// Enable U1RX
	        PIN_PULLUP_EN(PERIPHS_IO_MUX_SD_DATA2_U);
	        PIN_FUNC_SELECT(PERIPHS_IO_MUX_SD_DATA2_U, FUNC_SD_DATA2_U1RXD);

			if (rx) *rx = PIN_GPIO9;
			if (tx) *tx = PIN_GPIO10;

			break;

		case 2:
			// Enable U2TX
			PIN_PULLUP_DIS(PERIPHS_IO_MUX_GPIO17_U);
			PIN_FUNC_SELECT(PERIPHS_IO_MUX_GPIO17_U, FUNC_GPIO17_U2TXD);

			// Enable U2RX
	        PIN_PULLUP_EN(PERIPHS_IO_MUX_GPIO16_U);
	        PIN_FUNC_SELECT(PERIPHS_IO_MUX_GPIO16_U, FUNC_GPIO16_U2RXD);

			if (rx) *rx = PIN_GPIO16;
			if (tx) *tx = PIN_GPIO17;

			break;
	}
}

void  uart_rx_intr_handler(void *para) {
    BaseType_t xHigherPriorityTaskWoken;
    xHigherPriorityTaskWoken = pdFALSE;
    u32_t uart_intr_status = 0;
	u8_t byte;
	int signal = 0;
	int unit = 0;

	for(;unit < NUART;unit++) {
		uart_intr_status = READ_PERI_REG(UART_INT_ST_REG(unit)) ;

	    while (uart_intr_status != 0x0) {
	        if (UART_FRM_ERR_INT_ST == (uart_intr_status & UART_FRM_ERR_INT_ST)) {
	            WRITE_PERI_REG(UART_INT_CLR_REG(unit), UART_FRM_ERR_INT_CLR);
	        } else if (UART_RXFIFO_FULL_INT_ST == (uart_intr_status & UART_RXFIFO_FULL_INT_ST)) {
	            while ((READ_PERI_REG(UART_STATUS_REG(unit)) >> UART_RXFIFO_CNT_S)&UART_RXFIFO_CNT) {
					byte = READ_PERI_REG(UART_FIFO_REG(unit)) & 0xFF;
					if (queue_byte(unit, byte, &signal)) {
			            // Put byte to UART queue
			            xQueueSendFromISR(uart[unit].q, &byte, &xHigherPriorityTaskWoken);
					} else {
						if (signal) {
							_pthread_queue_signal(signal);
						}
					}
	            }

	            WRITE_PERI_REG(UART_INT_CLR_REG(unit), UART_RXFIFO_FULL_INT_CLR);
	        } else if (UART_RXFIFO_TOUT_INT_ST == (uart_intr_status & UART_RXFIFO_TOUT_INT_ST)) {
	            while ((READ_PERI_REG(UART_STATUS_REG(unit)) >> UART_RXFIFO_CNT_S)&UART_RXFIFO_CNT) {
					byte = READ_PERI_REG(UART_FIFO_REG(unit)) & 0xFF;
					if (queue_byte(unit, byte, &signal)) {
			            // Put byte to UART queue
			            xQueueSendFromISR(uart[unit].q, &byte, &xHigherPriorityTaskWoken);
					} else {
						if (signal) {
							_pthread_queue_signal(signal);
						}
					}
	            }

	            WRITE_PERI_REG(UART_INT_CLR_REG(unit), UART_RXFIFO_TOUT_INT_CLR);
	        } else if (UART_TXFIFO_EMPTY_INT_ST == (uart_intr_status & UART_TXFIFO_EMPTY_INT_ST)) {
	            WRITE_PERI_REG(UART_INT_CLR_REG(unit), UART_TXFIFO_EMPTY_INT_CLR);
	            CLEAR_PERI_REG_MASK(UART_INT_ENA_REG(unit), UART_TXFIFO_EMPTY_INT_ENA);
	        }

	        uart_intr_status = READ_PERI_REG(UART_INT_ST_REG(unit)) ;
	    }
	}

	if (xHigherPriorityTaskWoken) {
		portYIELD_FROM_ISR();
	}
}

void uart_init(u8_t unit, u32_t brg, u32_t mode, u32_t qs) {
	u8_t rx, tx;
	
    unit--;
	
	// If requestes queue size is greater than current size, delete queue and create
	// a new one
    if (qs > uart[unit].qs) {
		if (uart[unit].q) {
			vQueueDelete(uart[unit].q);
		}
		
		uart[unit].q  = xQueueCreate(qs, sizeof(u8_t));
	}

	uart_pin_config(unit, &rx, &tx);

	//if (!uart0_swaped) {
	//	syslog(LOG_INFO, "%s: at pins rx=%s/tx=%s", names[unit], cpu_pin_name(rx), cpu_pin_name(tx));
	//	syslog(LOG_INFO, "%s: speed %d bauds",names[unit], brg);  
	//}  

	uart_update_params(unit, brg, EIGHT_BITS, NONE_BITS, ONE_STOP_BIT);
	
    uart[unit].brg = brg; 
    uart[unit].qs  = qs; 

    uart[unit].flags |= UART_FLAG_INIT;
}
