==> whitecatboard/Lua-RTOS-ESP32/components/sys/drivers/uart.c <==
#include "sdkconfig.h"
#include "freertos/FreeRTOS.h"
#include "freertos/queue.h"
#include "freertos/timers.h"
#include "freertos/xtensa_api.h"
#include "esp_types.h"
#include "esp_err.h"
#include "esp_intr.h"
#include "esp_attr.h"
#include "soc/soc.h"
#include "soc/uart_reg.h"
#include "soc/io_mux_reg.h"
#include "driver/uart.h"
#include "driver/gpio.h"
#include <stdio.h>
#include <string.h>
#include <stdarg.h>
#include <signal.h>
#include <sys/macros.h>
#include <sys/status.h>
#include <sys/driver.h>
#include <sys/syslog.h>
#include <sys/delay.h>
#include <sys/_signal.h>
#include <pthread.h>
#include <drivers/uart.h>
#include <drivers/gpio.h>
#include <drivers/cpu.h>
#define UART_FLAG_INIT		(1 << 0)
#define UART_FLAG_IRQ_INIT	(1 << 1)
#define ETS_UART_INUM  5
#define UART_INTR_SOURCE(u) ((u==0)?ETS_UART0_INTR_SOURCE:( (u==1)?ETS_UART1_INTR_SOURCE:((u==2)?ETS_UART2_INTR_SOURCE:0)))

static void uart_pin_config(int8_t unit, uint8_t flags) {
	wait_tx_empty(unit);

	int tx_sig, rx_sig;

    switch(unit) {
        case UART_NUM_0:
            tx_sig = U0TXD_OUT_IDX;
            rx_sig = U0RXD_IN_IDX;
            break;
        case UART_NUM_1:
            tx_sig = U1TXD_OUT_IDX;
            rx_sig = U1RXD_IN_IDX;
            break;
        case UART_NUM_2:
            tx_sig = U2TXD_OUT_IDX;
            rx_sig = U2RXD_IN_IDX;
            break;
        case UART_NUM_MAX:
            default:
            tx_sig = U0TXD_OUT_IDX;
            rx_sig = U0RXD_IN_IDX;
            break;
    }

    // Configure TX
    if ((flags & UART_FLAG_WRITE) && (uart[unit].tx >= 0)) {
        PIN_FUNC_SELECT(GPIO_PIN_MUX_REG[uart[unit].tx], PIN_FUNC_GPIO);
        gpio_set_level(uart[unit].tx, 1);
        gpio_matrix_out(uart[unit].tx, tx_sig, 0, 0);
    }

    // Configure RX
    if ((flags & UART_FLAG_READ) && (uart[unit].rx >= 0)) {
        PIN_FUNC_SELECT(GPIO_PIN_MUX_REG[uart[unit].rx], PIN_FUNC_GPIO);
        gpio_set_pull_mode(uart[unit].rx, GPIO_PULLUP_ONLY);
        gpio_set_direction(uart[unit].rx, GPIO_MODE_INPUT);
        gpio_matrix_in(uart[unit].rx, rx_sig, 0);
    }
}

void IRAM_ATTR uart_rx_intr_handler(void *args) {
    BaseType_t xHigherPriorityTaskWoken = pdFALSE;
    uint32_t uart_intr_status = 0;
    uart_deferred_data data;

	uint8_t byte, status;
	int signal = 0;
	int unit = (int)args;

	uart_intr_status = READ_PERI_REG(UART_INT_ST_REG(unit));

	while (uart_intr_status != 0x0) {
		if (UART_FRM_ERR_INT_ST == (uart_intr_status & UART_FRM_ERR_INT_ST)) {
			WRITE_PERI_REG(UART_INT_CLR_REG(unit), UART_FRM_ERR_INT_CLR);
		} else if (UART_RXFIFO_FULL_INT_ST == (uart_intr_status & UART_RXFIFO_FULL_INT_ST)) {
			WRITE_PERI_REG(UART_INT_CLR_REG(unit), UART_RXFIFO_FULL_INT_CLR);

			while ((READ_PERI_REG(UART_STATUS_REG(unit)) >> UART_RXFIFO_CNT_S)&UART_RXFIFO_CNT) {
				byte = READ_PERI_REG(UART_FIFO_REG(unit)) & 0xFF;
				if (queue_byte(unit, byte, &status, &signal)) {
					// Put byte to UART queue
					xQueueSendFromISR(uart[unit].q, &byte, &xHigherPriorityTaskWoken);
				} else {
					if (signal) {
						data.type = 0;
						data.data = signal;

						xQueueSendFromISR(deferred_q, &data, &xHigherPriorityTaskWoken);
					}

					if (status) {
						data.type = 1;
						data.data = status;

						xQueueSendFromISR(deferred_q, &data, &xHigherPriorityTaskWoken);
					}
				}
			}
		} else if (UART_RXFIFO_TOUT_INT_ST == (uart_intr_status & UART_RXFIFO_TOUT_INT_ST)) {
			WRITE_PERI_REG(UART_INT_CLR_REG(unit), UART_RXFIFO_TOUT_INT_CLR);

			while ((READ_PERI_REG(UART_STATUS_REG(unit)) >> UART_RXFIFO_CNT_S)&UART_RXFIFO_CNT) {
				byte = READ_PERI_REG(UART_FIFO_REG(unit)) & 0xFF;
				if (queue_byte(unit, byte, &status, &signal)) {
					// Put byte to UART queue
					xQueueSendFromISR(uart[unit].q, &byte, &xHigherPriorityTaskWoken);
				} else {
					if (signal) {
						data.type = 0;
						data.data = signal;

						xQueueSendFromISR(deferred_q, &data, &xHigherPriorityTaskWoken);
					}

					if (status) {
						data.type = 1;
						data.data = status;

						xQueueSendFromISR(deferred_q, &data, &xHigherPriorityTaskWoken);
					}
				}
			}
		}

		uart_intr_status = READ_PERI_REG(UART_INT_ST_REG(unit));
	}

	portEND_SWITCHING_ISR(xHigherPriorityTaskWoken);
}

driver_error_t *uart_init(int8_t unit, uint32_t brg, uint8_t databits, uint8_t parity, uint8_t stop_bits, uint8_t flags, uint32_t qs) {
	// Sanity checks
	if ((unit > CPU_LAST_UART) || (unit < CPU_FIRST_UART)) {
		return driver_error(UART_DRIVER, UART_ERR_INVALID_UNIT, NULL);
	}

    if ((!(GPIO_ALL_IN & (GPIO_BIT_MASK << uart[unit].rx))) && (uart[unit].rx >= 0)) {
		return driver_error(UART_DRIVER, UART_ERR_PIN_NOT_ALLOWED, "rx, selected pin cannot be input");
    }

    if ((!(GPIO_ALL_OUT & (GPIO_BIT_MASK << uart[unit].tx))) && (uart[unit].tx >= 0)) {
		return driver_error(UART_DRIVER, UART_ERR_PIN_NOT_ALLOWED, "tx, selected pin cannot be input");
    }

    if (!TEST_UNIQUE2(uart[unit].rx, uart[unit].tx)) {
		return driver_error(UART_DRIVER, UART_ERR_PIN_NOT_ALLOWED, "rx, and tx must be different");
    }

    // Get data bits, and sanity checks
    UartBitsNum4Char esp_databits = EIGHT_BITS;
    switch (databits) {
    	case 5: esp_databits = FIVE_BITS ; break;
    	case 6: esp_databits = SIX_BITS  ; break;
    	case 7: esp_databits = SEVEN_BITS; break;
    	case 8: esp_databits = EIGHT_BITS; break;
    	default:
    		return driver_error(UART_DRIVER, UART_ERR_INVALID_DATA_BITS, NULL);
    }

    // Get parity, and sanity checks
    UartParityMode esp_parity = NONE_BITS;
    switch (parity) {
    	case 0: esp_parity = NONE_BITS;break;
    	case 1: esp_parity = EVEN_BITS;break;
    	case 2: esp_parity = ODD_BITS ;break;
    	default:
    		return driver_error(UART_DRIVER, UART_ERR_INVALID_PARITY, NULL);
    }

    // Get stop bits, and sanity checks
    UartStopBitsNum esp_stop_bits = ONE_STOP_BIT;
    switch (stop_bits) {
    	case 0: esp_stop_bits = ONE_HALF_STOP_BIT; break;
    	case 1: esp_stop_bits = ONE_STOP_BIT; break;
    	case 2: esp_stop_bits = TWO_STOP_BIT; break;
    	default:
    		return driver_error(UART_DRIVER, UART_ERR_INVALID_STOP_BITS, NULL);
    }

#if CONFIG_LUA_RTOS_USE_HARDWARE_LOCKS
    // Lock resources
    driver_error_t *error;

    if ((error = uart_lock_resources(unit, flags, NULL))) {
		return error;
	}
#endif

	// There are not errors, continue with init ...

    // Enable module
    switch (unit) {
    	case 0: periph_module_enable(PERIPH_UART0_MODULE); break;
    	case 1: periph_module_enable(PERIPH_UART1_MODULE); break;
    	case 2: periph_module_enable(PERIPH_UART2_MODULE); break;
    }

    // If the requested queue size is greater than current queue size,
	// delete it and create a new one
    if (qs > uart[unit].qs) {
		if (uart[unit].q) {
			vQueueDelete(uart[unit].q);
		}

		uart[unit].q  = xQueueCreate(qs, sizeof(uint8_t));
		if (!uart[unit].q) {
			driver_error(UART_DRIVER, UART_ERR_NOT_ENOUGH_MEMORY, NULL);
		}
	}

    // Init mutex, if needed
    if (uart[unit].mtx == PTHREAD_MUTEX_INITIALIZER) {
        pthread_mutexattr_t attr;

        pthread_mutexattr_init(&attr);
        pthread_mutexattr_settype(&attr, PTHREAD_MUTEX_RECURSIVE);

        pthread_mutex_init(&uart[unit].mtx, &attr);
    }

	// For the console, create the queue signal, and start a task for process signals
    // received from the console
	#if CONFIG_LUA_RTOS_USE_CONSOLE
		if (unit == CONSOLE_UART) {
			if (!deferred_q) {
				deferred_q = xQueueCreate(1, sizeof(uart_deferred_data));
				xTaskCreatePinnedToCore(uart_deferred_intr_handler, "uart", configMINIMAL_STACK_SIZE, NULL, 21, NULL, 0);
			}
		}
	#endif

	uart_pin_config(unit, flags);
	uart_comm_param_config(unit, brg, esp_databits, esp_parity, esp_stop_bits);

    uart[unit].brg = brg; 
    uart[unit].qs  = qs; 

    uart[unit].flags |= UART_FLAG_INIT;

    if ((flags & (UART_FLAG_READ | UART_FLAG_WRITE)) == (UART_FLAG_READ | UART_FLAG_WRITE)) {
	    syslog(LOG_INFO, "%s: at pins rx=%s%d/tx=%s%d",names[unit],
	            gpio_portname(uart[unit].rx), gpio_name(uart[unit].rx),
	            gpio_portname(uart[unit].tx), gpio_name(uart[unit].tx));
	} else if ((flags & (UART_FLAG_READ | UART_FLAG_WRITE)) == UART_FLAG_WRITE) {
	    syslog(LOG_INFO, "%s: at pins tx=%s%d",names[unit],
	            gpio_portname(uart[unit].tx), gpio_name(uart[unit].tx));
	} else if ((flags & (UART_FLAG_READ | UART_FLAG_WRITE)) == UART_FLAG_READ) {
	    syslog(LOG_INFO, "%s: at pins rx=%s%d",names[unit],
	            gpio_portname(uart[unit].rx), gpio_name(uart[unit].rx));
	}

    syslog(LOG_INFO, "%s: speed %d bauds", names[unit],brg);

    return NULL;
}
